# SBS_VSProject

./: Simple Building Simulator.sln  Test_GNUIOSTREAM.cpp
Simple Building Simulator/: ControlBox.cpp  ControlBox.h  Main.cpp  SPOT.cpp  SPOT.h  Simple Building Simulator.vcxproj  Simple Building Simulator.vcxproj.filters  TestGNUIOSTREAM.cpp  WriteOutput.cpp  WriteOutput.h  building.cpp  building.h  control.cpp  control.h  defs.h  occupancy.cpp  occupancy.h  print.cpp  print.h  resource.h  weather.cpp  weather.h
Simple Building Simulator/output/: simulation.csv
include/EIGENDIR/: .hg_archival.txt
include/amplapi32/doc/cpp/: class-structure.html  examples.html  genindex.html  getting-started.html  index.html  intro.html  objects.inv  quick-start.html  reference.html  search.html  searchindex.js
include/amplapi32/doc/java/: class-structure.html  examples.html  genindex.html  getting-started.html  index.html  intro.html  objects.inv  packages.html  quick-start.html  reference.html  search.html  searchindex.js
include/amplapi32/examples/cpp/: CMakeLists.txt  asyncexample.cc  dataframeexample.cc  dietmodel.cc  multidimensionalexample.cc  trackingmodel.cc
include/amplapi32/lib/: ampl1.2.2.lib
include/amplapi32/matlab/: AMPL.m  AMPLBase.m  Constraint.m  ConstraintBase.m  ConstraintInstance.m  ConstraintInstanceBase.m  DataFrame.m  DataFrameBase.m  Entity.m  EntityList.m  EntityListBase.m  Instance.m  Objective.m  ObjectiveBase.m  ObjectiveInstance.m  ObjectiveInstanceBase.m  Parameter.m  ParameterBase.m  Set.m  SetBase.m  SetInstance.m  SetInstanceBase.m  Tuple.m  TupleBase.m  Variable.m  VariableBase.m  VariableInstance.m  VariableInstanceBase.m  fileExists.m  setUp.m  toJava.m  toTuples.m
models/: mpcmodel.mod
plot/: plot_output.gnu
(+159 files in other folders)
